# 381706-1Kolesova-allLabs

./: .travis.yml  CMakeLists.txt  KolesomaReport_MultiSteck.docx  KolesovaQueue_Report.docx  KolesovaReport2.docx  KolesovaReport_ArList.docx  KolesovaReport_List.docx  KolesovaReport_MultiSteck.docx  KolesovaReport_Polinomial.docx  KolesovaReport_Polish.docx  KolesovaReport_SteckList.docx  KolesovaStack_Report.docx  README.md  Stack.docx  main.cpp  report.docx
ArrayList/: main_ArrayList.cpp
ArrayListLib/: ArrayList.h  TArrayList.h
ArrayListTests/: ArrayListTest.cpp
ExceptionLib/: ExceptionLib.cpp  ExceptionLib.h
HashTab/: mainHashTab.cpp
HashTabLib/: HashTabLib.h  THElemLib.h
List/: main_List.cpp
ListLib/: List.h
ListTest/: test_List.cpp
MStack/: mStack.cpp
MStackLib/: MStack.h
Matrix/: Matrix_main.cpp
MatrixLib/: Matrix.h
MatrixTest/: MatrixTest.cpp
MonomialLib/: Monomial.cpp  Monomial.h
MonomialTest/: moly_test.cpp
Plex/: mainPlex.cpp  sample_tplex.cpp
PlexLib/: CircleLib.h  PlexLib.h  PointLib.h  SectionLib.h
PlexTest/: test_tplex.cpp
Polinomial/: main_poly.cpp
PolinomialLib/: Polinomial.cpp  Polinomial.h
PolinomialTest/: poly_test.cpp
Polish/: CMakeLists.txt  Polish_main.cpp
PolishLib/: CMakeLists.txt  Polish.cpp  Polish.h  Stroka.cpp
PolishTest/: PolishTest.cpp
Queue/: CMakeLists.txt  main.cpp
QueueLib/: CMakeLists.txt  Queue.h
QueueTest/: CMakeLists.txt  test.cpp
SortTab/: mainSortTab.cpp
SortTabLib/: STElemLib.h  SortTabLib.h
Stack/: CMakeLists.txt  main.cpp
StackLib/: Stack.h
StackList/: StackList_main.cpp
StackListLib/: StackList.h
StackTest/: CMakeLists.txt  test.cpp  test_main.cpp
Tab/: mainTab.cpp
TabLib/: TElemLib.h  TabLib.h
Text/: mainText.cpp
TextLib/: ElemLib.h  ListLib.h  NodeIterLib.h  NodeLib.h  StringLib.h  TextLib.h
TreeTabLib/: TTElemLib.h  TreeTabLib.h
Vector/: CMakeLists.txt  Vector_main.cpp
VectorLib/: CMakeLists.txt  Vector.h  main.cpp
Vectortest/: CMakeLists.txt  VTest.cpp  VectorTest.cpp
gtest/: cmake_install.cmake  gtest.vcxproj  gtest.vcxproj.filters
gtest/gtest.dir/Debug/gtest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  gtest.lastbuildstate
