file(GLOB hdrs "*.h*") 
file(GLOB srcs "*.cpp")

add_executable(${Vector} ${srcs} ${hdrs}) #Создаем проект с именем из переменной ${PROJECT_NAME}, в него добавляются файлы из переменных ${srcs} и ${hdrs}

target_link_libraries(${Vector} ${VectorLib}) #Подключаем к проекту с именем ${PROJECT_NAME} библиотеку с именем ${MyLib1}


#add_library(${MyLib1} STATIC ${srcs} ${hdrs}) #РЎРѕР·РґР°РµРј СЃС‚Р°С‚РёС‡РµСЃРєСѓСЋ Р±РёР±Р»РёРѕС‚РµРєСѓ СЃ РёРјРµРЅРµРј РёР· РїРµСЂРµРјРµРЅРЅРѕР№ ${MyLib1}, РѕР±СЉСЏРІР»РµРЅРЅРѕР№ РІ СЂРѕРґРёС‚РµР»СЊСЃРєРѕРј CMake С„Р°Р№Р»Рµ (Р»РѕРєР°Р»СЊРЅС‹Рµ РїРµСЂРµРјРµРЅРЅС‹Рµ РїРµСЂРµРЅРѕСЃСЏС‚СЃСЏ РІ РЅР°СЃР»РµРґРЅРёРєРѕРІ), РІ РЅРµС‘ РґРѕР±Р°РІР»СЏСЋС‚СЃСЏ С„Р°Р№Р»С‹ РёР· РїРµСЂРµРјРµРЅРЅС‹С… ${srcs} Рё ${hdrs}


